--- a/pom.xml
+++ b/pom.xml
@@ -28,4 +28,10 @@
         </dependency>
     </dependencies>
 
+    <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.12</version>
+        <scope>test</scope>
+    </dependency>
 </project>
